[package]
name = "worker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13.0", features = [ "attributes" ] }
futures = { version = "0.3.30", features = [ "executor", "thread-pool" ] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
hex = "0.4.3"
ring = "0.17.8"
num_cpus = "1.16.0"
minreq = { version = "2.12.0", features = [ "json-using-serde" ] }
serde_json = "1.0.128"
